# laminar_file_share

./: .gitignore  start.ps1
file_client/: Cargo.toml
file_client/src/: board_view.rs  client.rs  main.rs
file_common/: Cargo.toml
file_common/src/: acknowledgement_board_view.rs  lib.rs
file_server/: Cargo.toml
file_server/src/: main.rs  server.rs  table_view.rs  view.rs
