[package]
name = "file_common"
version = "0.1.0"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.0"
crossterm = "0.13.3"
serde = { version = "1.0.0", features = ["derive"] }
